Fix issues deleting hooks and channels caused by enabling CSRF protection for all POST requests, not just typed forms.

--- a/notifico/templates/projects/delete_channel.html
+++ b/notifico/templates/projects/delete_channel.html
@@ -16,6 +16,7 @@
             {% endtrans %}
           </p>
           <div class="form-actions">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <button type="submit" class="btn btn-danger" value="d" name="do">
               {{ _('Remove Channel') }}
             </button>
